4754-Resolved the conficts and google snippet (#43)
* 4754-Resolved the conficts and google snippet

4754-Resolved the conficts of single listing .php and implemented the google snippet if there is a value,if reviews has 0 value didn't show hide google snippet

* Reviews are not showing up below title

Issue #1
https://hypley.com/listing/brisbane/balloon-decor-back-drop-photo-booth-picnics-and-more/  reviews arent showing up

--- a/themes/listeo-child/style.css
+++ b/themes/listeo-child/style.css
@@ -2777,3 +2777,16 @@ p.mem-bdg:before {
 }
 
 /* ratings add reviews box end */
+
+
+/* reviews below title start */
+
+span.cus_address {
+    display: block !important;
+}
+
+span.cus_address + .star-rating {
+    display: inline;
+}
+
+/* reviews below title end */
